--- a/mainformm.html
+++ b/mainformm.html
@@ -1,40 +1,74 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>main form </title>
-  </head>
-  <body bgcolor=white>
-    <h1 align="center">hello friends</h1>
-    <img src="abc.jpg" alt="so such file">
-<table border="1">
-  <tr>
-    <th>no.1</th>
-  <th>name</th>
+
+<head>
+  <meta charset="utf-8">
+  <title>main form </title>
+</head>
+
+<body>
+  <h1 align="center"><u>hello friends</u></h1>
+  <table border="0" width=100%>
+    <td>
+      <table border="0" cellpadding=10% cellspacing="0">
+        <tr>
+          <td>
+            <img src="images/DSC_7317.png" alt="so such file" width="125" height="125">
+          </td>
+          <td>Laxman Suresh Dhaygude <br> <strong>(BSC(com sci.))<br /></strong>Email:dhaygudelakhan11@gmail.com <br>Mobile:7057910799</td>
+        </tr>
+      </table>
+    </td>
+    <td>
+      <table border="0">
+        <tr>
+          <td>A/P Padali,Tal-Khandala <br />Dist-Satara,Pincode-415521<br />Maharastra</td>
+        </tr>
+    </td>
+  </table>
+  </table>
+  <hr color=red>
+ <h1 color="blue">Career Objective</h1>
+
+
+<p>Aspiring a sutaible entry-level potion in an oraganization hich will provide an opportunity to improve <br>my skills with challenging task to improve myself as well as for the oraganization. <br>
+  <h2> Educational Details</h2><br>
+</p>
+<table border="" cellpadding=0 cellspacing=0>
+
+  <tr bgcolor=red>
+  <th>Qualification</th>
+  <th>Board/University</th>
+  <th>School/College</th>
+  <th>Percentage</th>
+  <th>Year of passing</th>
   </tr>
-  <td>1</td>
-  <td>lakhan dhaygude</td>
   <tr>
-<td>2</td>
-<td>aj dhaygude</td>
+    <td>HSC</td>
+  <td>  Shivaji University,<br>Kolhapur</td>
+  <td>RJ College khandala</td>
+<td>48.80%</td>
+<td>2016</td>
+  </tr>
+  <tr>
+    <td>Bsc <br />(com sci.)</td>
+  <td>  Shivaji University,<br>Kolhapur</td>
+  <td>Mudhoji college phaltan </td>
+<td>68.80%</td>
+<td>2019</td>
+  </tr>
+  <tr>
+    <td>SSC</td>
+  <td>  Shivaji University,<br>Kolhapur</td>
+  <td>Panchacroshi Vidyalaya <br>Padali,sukhed,Bori</td>
+<td>72.40%</td>
+<td>2014</td>
   </tr>
 </table>
-<hr>
-<pre> <i><strong>hey!</strong></i><br> my name is laxman dhaygude .<br>i am from at post padali tal-khandala dist-satara
-  state-maharastra country-india
-<b>  pin-code 415521</b>
-</pre>
-<a href="contact.html">contCT ME</a>
-<ol start=5>
-  <li>Name</li>
-  <li>surename</li>
-</ol>
+<h1>Technical skill</h1>
 <ul>
-  <li> A </li>
-  <li>B</li>
-
+  <li><strong> Languages-</strong> C,C==,VB.NET,ASP,NET,JAVASCRIPT,C# CSS</li>
+  <li> <strong>TOOLS- </strong> sql server 2012,atom,vs code, visual basic 2019,microsoft access database,netbean</li>
 </ul>
-
-
-  </body>
+</body>
 </html>
